--- a/index.html
+++ b/index.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=
-        , initial-scale=1.0">
-        <title>Cronômetro</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap" rel="stylesheet">
-        
-    </head>
-    <body>
 
-        <div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=
+        , initial-scale=1.0">
+    <title>Cronômetro</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+
+
+</head>
+
+<body>
+
+    <section>
+        <div class="container">
             <h1 id="watch">00:00:00</h1>
             <button class="start" onclick="start();">Start</button>
             <button class="pause" onclick="pause();">Pause</button>
             <button class="stop" onclick="stop();">Stop</button>
         </div>
+    </section>
 
-        <script src="index.js"></script>
-    </body>
+    <footer>
+        <a class="mb" href="https://www.instagram.com/euvncius/">
+        <i class='bx bxl-instagram'></i>euvnicius</a>
+    </footer>
+
+    <script src="index.js"></script>
+</body>
+
 </html>
